Update FileSettingsService tests